--- a/classes_theory.ipynb
+++ b/classes_theory.ipynb
@@ -4,10 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### What is an object?\n",
-    " It is a container that contains:\n",
-    "1. data --> state --> attributes\n",
-    "2. functionality --> behavior --> methods"
+    "<h5 style=\"color:skyblue;\">What is an object?</h5>\n",
+    "<p>\n",
+    "    It is a container that contains:\n",
+    "    <ol>\n",
+    "        <li style=\"color:lightpink;\">data --&gt; state --&gt; attributes</li>\n",
+    "        <li style=\"color:lightpink;\">functionality --&gt; behavior --&gt; methods</li>\n",
+    "    </ol>\n",
+    "</p>\n"
    ]
   },
   {
@@ -28,22 +32,6 @@
     "    \n",
     "    def brake(self):\n",
     "        pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### How to access data?\n",
-    "\n",
-    "Using dot notation:\n",
-    "\n",
-    "\n",
-    "car1.brand\n",
-    "\n",
-    "car1.model\n",
-    "\n",
-    "car1.year"
    ]
   },
   {
@@ -84,10 +72,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Class itself is an object of type --> type\n",
-    "Python creates an object for the class\n",
-    "Each class object has attributes like --> Car.__name__\n",
-    "Each class has behavior (i.e callable) --> which returns instance of a class or object"
+    "<ol>\n",
+    "    <li style=\"color:lightpink;\">Class itself is an object of type --&gt; type</li>\n",
+    "    <li style=\"color:lightpink;\">Python creates an object for the class</li>\n",
+    "    <li style=\"color:lightpink;\">Each class object has attributes like --&gt; Car.__name__</li>\n",
+    "    <li style=\"color:lightpink;\">Each class has behavior (i.e callable) --&gt; which returns instance of a class or object</li>\n",
+    "</ol>\n"
    ]
   },
   {
@@ -183,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Defining attributes in a class"
+    "<h4 style=\"color:skyblue;\">Defining attributes in a class</h4>\n"
    ]
   },
   {
@@ -225,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Built in 'getattr' and 'setattr' function :\n",
+    "<h4 style='color:green'>Built in 'getattr' and 'setattr' function :<h4>\n",
     "\n",
     "getattr(object, attribute_name, default_value)\n",
     "\n",
@@ -396,6 +386,338 @@
    ],
    "source": [
     "new_obj.revised_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              'language': 'Python',\n",
+       "              'version': 3.8,\n",
+       "              '__dict__': <attribute '__dict__' of 'MyClass' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'MyClass' objects>,\n",
+       "              '__doc__': None,\n",
+       "              'release_date': '10/12/1994'})"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MyClass.__dict__ ## namespace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style='color:green'>delete attribute<h4>\n",
+    "\n",
+    "* delattr(obj_name, attribute_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'MyClass' has no attribute 'release_date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\NAVBASAV\\Desktop\\python_deep_dive\\python_deep_dive\\classes_theory.ipynb Cell 25\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/NAVBASAV/Desktop/python_deep_dive/python_deep_dive/classes_theory.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdelattr\u001b[39;49m(MyClass, \u001b[39m'\u001b[39;49m\u001b[39mrelease_date\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m# del MyClss.release_date\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'MyClass' has no attribute 'release_date'"
+     ]
+    }
+   ],
+   "source": [
+    "delattr(MyClass, 'release_date') # del MyClss.release_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'MyClass' has no attribute 'release_date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\NAVBASAV\\Desktop\\python_deep_dive\\python_deep_dive\\classes_theory.ipynb Cell 26\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/NAVBASAV/Desktop/python_deep_dive/python_deep_dive/classes_theory.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m MyClass\u001b[39m.\u001b[39;49mrelease_date\n",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'MyClass' has no attribute 'release_date'"
+     ]
+    }
+   ],
+   "source": [
+    "MyClass.release_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'MyClass' object has no attribute 'release_date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\NAVBASAV\\Desktop\\python_deep_dive\\python_deep_dive\\classes_theory.ipynb Cell 27\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/NAVBASAV/Desktop/python_deep_dive/python_deep_dive/classes_theory.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m new_obj\u001b[39m.\u001b[39;49mrelease_date\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'MyClass' object has no attribute 'release_date'"
+     ]
+    }
+   ],
+   "source": [
+    "new_obj.release_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'language': 'Python', 'version': 3.8, '__dict__': <attribute '__dict__' of 'MyClass' objects>, '__weakref__': <attribute '__weakref__' of 'MyClass' objects>, '__doc__': None}\n",
+      "Python\n",
+      "3.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(MyClass.__dict__) # returns mapping proxy dict or namespace\n",
+    "print(MyClass.__dict__['language'])\n",
+    "print(MyClass.__dict__['version'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Setting an aatribute value to a callable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    language = 'Python'\n",
+    "    def say_hello():\n",
+    "        print('Hello World!')\n",
+    "\n",
+    "# here say_hello is an attribute of the class --> whose value is callable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              'language': 'Python',\n",
+       "              'say_hello': <function __main__.MyClass.say_hello()>,\n",
+       "              '__dict__': <attribute '__dict__' of 'MyClass' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'MyClass' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MyClass.__dict__ # we see say_hello in the namespace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How to call callable attribute\n",
+    "\n",
+    "# 1. first way\n",
+    "\n",
+    "myfunc = MyClass.__dict__['say_hello']\n",
+    "myfunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2 way\n",
+    "\n",
+    "MyClass.__dict__['say_hello']()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 way\n",
+    "getattr(MyClass, 'say_hello')()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4 way\n",
+    "MyClass.say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Classes are callables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# When we create a class, python automatically adds some behavior to this class\n",
+    "# In particular:\n",
+    "# 1. It adds something to the class callable \n",
+    "# 2. It returns an object\n",
+    "# 3. The type of that object is the class object, this process is called instantiation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_obj = MyClass()\n",
+    "isinstance(my_obj, MyClass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.MyClass"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(my_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "<class '__main__.MyClass'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "## The object (or the instance of a class) created has its own namespace\n",
+    "## Which is distinct from the namespace of the class that was used to create the object\n",
+    "## Some attributes are\n",
+    "print(my_obj.__dict__) # namespace\n",
+    "print(my_obj.__class__) # the class name\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Data Attributes"
    ]
   },
   {
