--- a/scopes.ipynb
+++ b/scopes.ipynb
@@ -1,14 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. the portion of code where the object reference/biding can be accessed is called scope of the object\n",
+    "2. the references/bindings are stored in namespaces. each scope has its own namespace\n",
+    "3. global scope refers to module scope. i.e the object can be used anywhere in the module.\n",
+    "4. global keyword is used to change the global variable locally.\n",
+    "5. local scope refers to scope within a function. \n",
+    "6. non-local scope refers to free variables defined in nested functions. i.e the inner functions can access the varaibles defined in the outer function\n",
+    "7. non-local keyword is used to change the variable just out the inner function.\n",
+    "8. built-in scope referes to truly global scope, i.e objects like print() are available across all modules.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "python\n",
       "before inner 2, x:  naveen\n",
       "after inner 2, x:  naveen\n",
       "naveen\n",
