--- a/classes_theory.ipynb
+++ b/classes_theory.ipynb
@@ -722,6 +722,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              'apr': 1.2,\n",
+       "              '__dict__': <attribute '__dict__' of 'BankAccount' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'BankAccount' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "    apr = 1.2\n",
+    "\n",
+    "BankAccount.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BankAccount.apr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc1 = BankAccount()\n",
+    "acc2 = BankAccount()\n",
+    "print(acc1 is acc2)\n",
+    "print(acc1.__dict__)\n",
+    "print(acc2.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.2, 1.2)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# when an object does not have an attribute, it will search the for the same in the class\n",
+    "\n",
+    "(acc1.apr, acc2.apr) # here the value is not from the object, but its from class\n",
+    "\n",
+    "# i.e python will check in acc1.__dict__ and acc2.__dict__, if no value found it searches in MyClass.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
