--- a/automation/file_handling.ipynb
+++ b/automation/file_handling.ipynb
@@ -585,14 +585,55 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Moving and copying files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello.txt'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import shutil\n",
+    "shutil.copy('hi.txt', 'hello.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('hello.txt', 'r')\n",
+    "f.read()\n",
+    "f.close()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shutil.copytree('hi.txt', 'hello.txt')"
+   ]
   }
  ],
  "metadata": {
