--- a/closures/closures.ipynb
+++ b/closures/closures.ipynb
@@ -61,32 +61,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0x262634b6300\n"
-     ]
-    }
-   ],
-   "source": [
-    "def outer():\n",
-    "    x = [1,2,3]\n",
-    "    print(hex(id(x)))\n",
-    "    def inner():\n",
-    "        # x = [1,2,3]\n",
-    "        y = x\n",
-    "        print(hex(id(x)))\n",
-    "    return inner\n",
-    "\n",
-    "fn = outer()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -104,22 +78,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function __main__.outer.<locals>.inner()>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naveen before\n",
+      "wassup during\n",
+      "naveen after\n"
+     ]
     }
    ],
    "source": [
-    "fn"
+    "def f1():\n",
+    "    x = \"naveen\"\n",
+    "    def f2():\n",
+    "        x = \"wassup\"\n",
+    "        print(f'{x} during')\n",
+    "    print(f'{x} before')\n",
+    "    f2()\n",
+    "    print(f'{x} after')\n",
+    "f1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naveen before\n",
+      "wassup during\n",
+      "wassup after\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f1():\n",
+    "    x = \"naveen\"\n",
+    "    def f2():\n",
+    "        nonlocal x \n",
+    "        x = \"wassup\"\n",
+    "        print(f'{x} during')\n",
+    "    print(f'{x} before')\n",
+    "    f2()\n",
+    "    print(f'{x} after')\n",
+    "f1()"
    ]
   },
   {
