--- a/1_memory_management.ipynb
+++ b/1_memory_management.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiq7/KH9V/nsca1J3xHdW/",
+      "authorship_tag": "ABX9TyMCynujggYFh6hdsQVum1Ga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,24 +65,24 @@
         "# int object with value 10 is created in the memory\n",
         "# my_var points to the address of the int object 10 in the memory\n",
         "my_var = 10\n",
-        "print(id(my_var)) # fetch the memory address of the object my_var is pointing to\n",
-        "print(hex(id(my_var)))"
+        "print(id(my_var))\n",
+        "print(f\"my_var references the object at {hex(id(my_var))} \")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFMyc3BcUIT2",
-        "outputId": "40c0a80c-5753-44ec-c792-78141857fd15"
+        "outputId": "e486b8d0-eda5-4af4-a8f7-a8f7cc6670e1"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "133890019164688\n",
-            "0x79c5b3080210\n"
+            "my_var references the object at 0x79c5b3080210 \n"
           ]
         }
       ]
