--- a/1_memory_management.ipynb
+++ b/1_memory_management.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCynujggYFh6hdsQVum1Ga",
+      "authorship_tag": "ABX9TyNRjTSVTBtn4xoPeufagJeS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,19 +88,93 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "* id() returns value in base 10.\n",
+        "* hex() returns value in hexadecimal."
+      ],
       "metadata": {
-        "id": "wr6tB-sPXXMy"
+        "id": "EGlhzebFYRf4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "  ------------------------------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "VIQfTvSHzeZy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Reference Counting"
+      ],
+      "metadata": {
+        "id": "d3zE9QdBza-I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let create two vars\n",
+        "var = 10\n",
+        "var2 = 10\n",
+        "print(f\"var references the object at {hex(id(var))}\")\n",
+        "print(f\"var2 references the object at {hex(id(var2))}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wr6tB-sPXXMy",
+        "outputId": "8c7deb37-239f-4083-9a39-d4854de48de3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "var references the object at 0x79c5b3080210\n",
+            "var2 references the object at 0x79c5b3080210\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get ref count\n",
+        "import sys, ctypes\n",
+        "print(sys.getrefcount(var)) # this creates extra variable\n",
+        "print(ctypes.c_long.from_address(id(var)).value) # true reference count"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_jw8kUS0X0iO",
+        "outputId": "b98be13d-06c2-4204-f5de-5b4fa526ea75"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "491\n",
+            "490\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_jw8kUS0X0iO"
+        "id": "TiYxvAewz3-P"
       },
       "execution_count": null,
       "outputs": []
