--- a/level-2/mutation.ipynb
+++ b/level-2/mutation.ipynb
@@ -40,6 +40,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3] 140449208072704\n",
+      "[1, 2, 3, 4] 140449208072704\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new address not created\n",
+    "x = [1,2,3]\n",
+    "print(x, id(x))\n",
+    "x.append(4)\n",
+    "print(x, id(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140449208072704\n",
+      "140449458882368\n",
+      "140449198141696\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new address created everytime\n",
+    "print(id(x))\n",
+    "print(id(x[:]))\n",
+    "print(id(x[:1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -47,8 +91,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
